tests/error/linear_errors/unused.err
Error: Drop violation (at $FILE:8:4)
  | 
6 | @guppy
7 | def foo(q: qubit @owned) -> int:
8 |     x = q
  |     ^ Variable `x` with non-droppable type `qubit` is leaked

Help: Make sure that `x` is consumed or returned to avoid the leak

Guppy compilation failed due to 1 previous error
